fix some more alignment issues

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -128,7 +128,7 @@ blockquote {
 pre,
 code {
     font-size: 15px;
-    border: 1px solid $grey-color-light;
+    /* border: 1px solid $grey-color-light; */
     border-radius: 3px;
     background-color: #111111;
     color: #eeeeee;
@@ -137,6 +137,8 @@ code {
 .linenodiv pre, .linenodiv code {
   background-color: #222;
   color: #aaa;
+}
+.linenos {
   vertical-align: baseline;
 }
 
